--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,6 @@ html,
   font-size: 12px;
   background-color: #0b30ab;
   color: white;
-  padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -75,7 +74,7 @@ html,
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 80px;
   height: 35px;
 }
 
